--- a/.gitignore
+++ b/.gitignore
@@ -361,3 +361,5 @@ MigrationBackup/
 
 # Fody - auto-generated XML schema
 FodyWeavers.xsd
+/webapi-example-dev/appsettings.Development.json
+/webapi-example-dev/appsettings.json
